# voxeltest

./: .gitignore  CMakeLists.txt
assets/shaders/: test.frag  test.vert
scripts/: build.sh
src/: main.c
